Fixed color scheme to improve readability

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,6 +1,9 @@
 input.form-control {
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgba(255,255,255,0.3);
     padding: 5px;
+}
+input.form-control:focus {
+    background-color: rgba(255,255,255,0.3);
 }
 
 form.form-inline {
