--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,10 +4,10 @@
 }
 
 .title-link {
-    color: black;
+    color: white;
 }
 .title-link:hover {
-    color: black;
+    color: white;
 }
 
 .lead {
