--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html, body, #root {
   width: 100%;
   height: 100%;
-  color: black !important;
+  color: white !important;
 }
 
 body {
